Adding base entities
Modifications qui seront validées :
	nouveau fichier : .env.dist
	modifié :         package-lock.json
	modifié :         package.json
	nouveau fichier : prisma/migrations/20231205042014_initial/migration.sql
	nouveau fichier : prisma/migrations/migration_lock.toml
	modifié :         prisma/schema.prisma
	nouveau fichier : shared/base/base.controller.ts
	nouveau fichier : shared/base/base.model.ts
	nouveau fichier : shared/base/base.service.ts
	supprimé :        src/app.controller.spec.ts
	supprimé :        src/app.controller.ts
	modifié :         src/app.module.ts
	supprimé :        src/app.service.ts
	nouveau fichier : src/core/api/security/security.api.module.ts
	nouveau fichier : src/core/api/security/security.controller.ts
	nouveau fichier : src/core/api/teacher/class.controller.ts
	nouveau fichier : src/core/api/teacher/payment.controller.ts
	nouveau fichier : src/core/api/teacher/student.controller.ts
	nouveau fichier : src/core/api/teacher/teacher.api.module.ts
	nouveau fichier : src/core/api/teacher/user.controller.ts
	nouveau fichier : src/core/module/class/class.module.ts
	nouveau fichier : src/core/module/class/class.service.ts
	nouveau fichier : src/core/module/payment/payment.module.ts
	nouveau fichier : src/core/module/payment/payment.service.ts
	nouveau fichier : src/core/module/security/security.module.ts
	nouveau fichier : src/core/module/security/security.service.ts
	nouveau fichier : src/core/module/student/student.module.ts
	nouveau fichier : src/core/module/student/student.service.ts
	nouveau fichier : src/core/module/user/user.module.ts
	nouveau fichier : src/core/module/user/user.service.ts
	nouveau fichier : src/core/security/auth.guard.ts
	nouveau fichier : src/core/security/public.decorator.ts
	modifié :         src/main.ts
	modifié :         tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,14 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "@app/base": ["shared/base"],
+      "@app/base/*": ["shared/base/*"],
+      "@app/core": ["src/core"],
+      "@app/core/*": ["src/core/*"],
+      "@app/api": ["src/api"],
+      "@app/api/*": ["src/api/*"],
+    }
   }
 }
